# Copyright 2026 by ReefConnect Team
"""Module defining the MediaProcessor class."""

from reef_connect.common.logger import get_logger

logger = get_logger(__name__)


class MediaProcessor:
    """Class for processing media files (thumbnails, optimization, etc.)."""

    def generate_thumbnails(self, decoded_media) -> dict:
        """
        Generate thumbnails from decoded media.

        Args:
            decoded_media: The decoded media object (e.g., PIL Image).

        Returns:
            dict: Metadata about generated thumbnails.
        """
        # Placeholder: Implement thumbnail generation
        logger.info("Generating thumbnails")
        # Example: Use Pillow to resize and save
        return {"thumbnail_urls": ["url1", "url2"], "dimensions": "100x100"}

    def optimize_format(self, decoded_media) -> dict:
        """
        Optimize media format.

        Args:
            decoded_media: The decoded media object.

        Returns:
            dict: Optimization metadata.
        """
        logger.info("Optimizing media format")
        return {"optimized_size": 12345}

    def extract_metadata(self, decoded_media) -> dict:
        """
        Extract metadata from media.

        Args:
            decoded_media: The decoded media object.

        Returns:
            dict: Extracted metadata.
        """
        logger.info("Extracting metadata")
        return {"width": 1920, "height": 1080, "format": "JPEG"}